# Reviewer2

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BLOG_DRAFT.md  ENGINEERING_LOG.md  POSTMORTEM.md
eval/: __init__.py  concordance.py  concordance_testset.json  errorcatch.py  errorcatch_testset.json
eval/fixtures/: evidence.json
eval/results/: .gitkeep
mcp_server/: __init__.py  server.py
src/reviewer2/: __init__.py  cli.py  conflicts.py  evidence.py  llm.py  models.py  normalise.py  pipeline.py  summary.py
src/reviewer2/acmg/: __init__.py  rules.py  scorer.py
tests/: test_errorcatch.py  test_pipeline.py  test_rules.py
